src/test/res/analyzer-tests/tailrec2.rsn

fn foo(){
    return foo!();  // dumb, but correct
}

fn bar(){
    return foo!();  // error: not referencing the enclosing function
}
